<resources>
    <string name="app_name">Abasteça Melhor</string>
    <string name="banner_ad_unit_id">ca-app-pub-8478899305646131/8388328312</string>
    <string name="banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="versao_app">1.0</string>
    <string name="autor">José Fernandes</string>
    <string name="abasteca_gasolina">Abasteça com Gasolina</string>
    <string name="abasteca_alcool">Abasteça com Álcool</string>
    <string name="preencha_todos_os_campos">Preencha todos os campos</string>
    <string name="valores_invalidos">Valores inválidos!</string>
    <string name="id_banner_admob">ca-app-pub-8478899305646131~9649848212</string>
    <string name="qual_compensa">Qual compensa ?</string>
    <string name="ok">OK</string>
    <string name="etanol">Etanol</string>
    <string name="gasolina">Gasolina</string>
    <string name="porque">Porque?</string>
    <string name="confirmacao_saida">Tem certeza que deseja sair do app??</string>
    <string name="sair">SAIR</string>
    <string name="sim">SIM</string>
    <string name="nao">NÃO</string>
</resources>
